[package]
name = "eth_pairing_py_rust"
version = "0.1.0"
authors = ["Lucieno <1155064923@link.cuhk.edu.hk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_pairings = { git = "https://github.com/matter-labs/eip1962.git" }
# pyo3 = { git = "https://github.com/PyO3/pyo3.git", features = ["extension-module"] }

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[lib]
name = "eth_pairing_py"
crate-type = ["cdylib"]